Added authentication, changed nginx basic template, added install script

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -48,9 +48,20 @@
                         </button>
                     </div>
                 </div>
+               
+                <div class="mobile hidden right item">
+                    <div class="ui right floated buttons">
+                        <button class="ui green button" onclick="reload_ng()" >
+                           Nginx Reload
+                        </button>
+                    </div>
+                </div>
 
+
+                <a class="header item" href="/logout">
+                    Logout
+                </a>
             </div>
-
         </div>
 
         <div class="ui stackable grid container" id="main-container">
