--- a/app/static/custom.css
+++ b/app/static/custom.css
@@ -14,6 +14,12 @@ textarea {
 #main-container {
     margin-top: 5em;
 }
+
+#login-container {
+  margin-top: 15em;
+  margin-left: 150em;
+}
+
 #domain {
     display: none;
 }
